--- a/ticTackToe.css
+++ b/ticTackToe.css
@@ -122,6 +122,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     flex-direction: column;
+    height: 100%;
 }
 
 h3 {
@@ -150,7 +151,6 @@ h3 {
 #Restart1,
 #Restart2,
 #Restart3 {
-
     font-size: 1.2rem;
     border: none;
     padding: 8px;
@@ -212,7 +212,7 @@ h3 {
     #Defeat,
     #draw,
     #Victory {
-    height:22vh;
+        height: 22vh;
         top: 35vh;
     }
 }
